--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 Pandas_Course/winemag-data-130k-v2.json
 Pandas_Course/winemag-data-130k-v2.csv
+Pandas_Course/winemag-data_first150k.csv
+Pandas_Course/cows_and_goats.csv
